@@ -5,3 +5,5 @@ Initial Commit with Vanilla Child Theme
 
 Added Fix for ProjectHuddle comment bubble positioning.
 There was a glitch caused by CSS applied to the admin header bar.
+
+Added fixes for 'outline: none' causing Accessibility Issues
